test/grammar/schema/union/binary_union/bin_union_fail_2/stderr.golden
error[E2G22]: TypeError
  --> ${CWD}/main.k:10:7
   |
10 | val = {"key": "value"} | person
   |       ^ unsupported operand type(s) for |: '{str(key):str(value)}' and 'Person'
   |